Bug fix in rule editor display

--- a/gameengine-editor/src/main/webapp/webcomponents/gameeditor-ruleeditor/gameeditor-ruleeditor.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/gameeditor-ruleeditor/gameeditor-ruleeditor.html
@@ -50,7 +50,7 @@
             .genericdeletebutton {
                 vertical-align: middle;
                 background-image: url("close.png");
-                display: inline;
+                display: inline-block;
                 width: 18px;
                 height: 18px;
             }
@@ -58,7 +58,6 @@
             .menubutton {
                 vertical-align: middle;
                 background-image: url("menu.png");
-                display: inline;
                 width: 24px;
                 height: 24px;
             }
@@ -70,12 +69,12 @@
 
         <div class="vertical">
             <div class="condition">
-                <div id="changeconditionmenu" class="contextmenu"></div>
+                <div id="changeconditionmenu" class="menubutton"></div>
                 <div id="conditionproperties">
                 </div>
             </div>
             <div class="actions">
-                <div id="addactionmenu" class="contextmenu"></div>
+                <div id="addactionmenu" class="menubutton"></div>
                 <div id="actionelements">
                 </div>
             </div>
