Layout bug fixing Fixed shader issues in grid renderer

--- a/gameengine-editor/src/main/webapp/index.html
+++ b/gameengine-editor/src/main/webapp/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="bower_components/toastr/toastr.min.css"/>
     <script>
 
         // setup Polymer options
@@ -32,9 +33,11 @@
         //});
 
     </script>
+    <script type="text/javascript" charset="utf-8" src="bower_components/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="bower_components/pixi.js/bin/pixi.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="bower_components/howler.js/dist/howler.core.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="bower_components/firebase/firebase.js"></script>
+    <script type="text/javascript" charset="utf-8" src="bower_components/toastr/toastr.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="teavm/runtime.js"></script>
     <script type="text/javascript" charset="utf-8" src="teavm/classes.js"></script>
 
