--- a/gameengine-editor/src/main/webapp/webcomponents/gameeditor-textfieldpropertyeditor/gameeditor-textfieldpropertyeditor.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/gameeditor-textfieldpropertyeditor/gameeditor-textfieldpropertyeditor.html
@@ -20,7 +20,8 @@
         <style>
             :host {
                 width: 100%;
-                flex-shrink: 1;
+                display: flex;
+                flex-direction: row;
             }
 
             .field {
@@ -28,7 +29,7 @@
                 border: 2px solid #33373c;
                 text-align: center;
                 display: inline-block;
-                width: 100%;
+                flex-grow: 1;
             }
 
             .field label {
