Fixed cross browser issue related to WebComponents Polyfill

--- a/gameengine-editor/src/main/webapp/webcomponents/gameeditor-tabbedpane/gameeditor-tabbedpane.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/gameeditor-tabbedpane/gameeditor-tabbedpane.html
@@ -147,6 +147,10 @@
                     this.selectTab(this.selectedtab);
                 }
             },
+
+            ready: function() {
+                this.fire("ready", {});
+            }
         });
     </script>
 </dom-module>
