Added Github OAuth authentication

--- a/gameengine-editor/src/main/webapp/editor.html
+++ b/gameengine-editor/src/main/webapp/editor.html
@@ -34,7 +34,7 @@
 
     </script>
     <script type="text/javascript" charset="utf-8" src="bower_components/jquery/dist/jquery.min.js"></script>
-    <script type="text/javascript" charset="utf-8" src="bower_components/pixi.js/bin/pixi.min.js"></script>
+    <script type="text/javascript" charset="utf-8" src="bower_components/pixi.js/dist/pixi.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="bower_components/howler.js/dist/howler.core.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="bower_components/firebase/firebase.js"></script>
     <script type="text/javascript" charset="utf-8" src="bower_components/toastr/toastr.min.js"></script>
