--- a/gameengine-teavmrenderer/src/main/webapp/index.html
+++ b/gameengine-teavmrenderer/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-    <script type="text/javascript" charset="utf-8" src="bower_components/pixi.js/bin/pixi.min.js"></script>
+    <script type="text/javascript" charset="utf-8" src="bower_components/pixi.js/dist/pixi.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="bower_components/howler.js/dist/howler.core.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="bower_components/firebase/firebase.js"></script>
     <script type="text/javascript" charset="utf-8" src="teavm/runtime.js"></script>
