Added Github OAuth authentication

--- a/gameengine-editor/src/main/webapp/index.html
+++ b/gameengine-editor/src/main/webapp/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="content">
-            <div class="welcomemessage">Welcome to Online Game Composer!</div>
+            <div class="welcomemessage" id="welcomemessage"></div>
             <div class="contentblocks">
                 <div class="contentblock">
                     <div class="infoblock">
