--- a/gameengine-teavmrenderer/src/main/webapp/index.html
+++ b/gameengine-teavmrenderer/src/main/webapp/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+    <meta http-equiv="cache-control" content="no-cache, must-revalidate, post-check=0, pre-check=0">
+    <meta http-equiv="expires" content="Sat, 31 Oct 2014 00:00:00 GMT">
+    <meta http-equiv="pragma" content="no-cache">
     <script type="text/javascript" charset="utf-8" src="bower_components/pixi.js/dist/pixi.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="bower_components/howler.js/dist/howler.core.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="bower_components/firebase/firebase.js"></script>
