--- a/gameengine-editor/src/main/webapp/editor.html
+++ b/gameengine-editor/src/main/webapp/editor.html
@@ -2,9 +2,11 @@
 <head>
     <title>GameEngine WebEditor</title>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-    <meta http-equiv="cache-control" content="no-cache, must-revalidate, post-check=0, pre-check=0">
-    <meta http-equiv="expires" content="Sat, 31 Oct 2014 00:00:00 GMT">
-    <meta http-equiv="pragma" content="no-cache">
+    <meta http-equiv="cache-control" content="max-age=0" />
+    <meta http-equiv="cache-control" content="no-cache" />
+    <meta http-equiv="expires" content="0" />
+    <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+    <meta http-equiv="pragma" content="no-cache" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="css/style.css"/>
