--- a/gameengine-gwtrenderer/src/main/webapp/index.html
+++ b/gameengine-gwtrenderer/src/main/webapp/index.html
@@ -2,8 +2,13 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+    <meta http-equiv="cache-control" content="max-age=0" />
+    <meta http-equiv="cache-control" content="no-cache" />
+    <meta http-equiv="expires" content="0" />
+    <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+    <meta http-equiv="pragma" content="no-cache" />
     <meta name="viewport" content="width=device-width, user-scalable=no" />
-    <meta http-equiv="Cache-Control" content="no-cache" />
     <title>Game Composer Example Game</title>
     <link type="text/css" rel="stylesheet" href="style.css">
     <script type="text/javascript" language="javascript" src="de.mirkosertic.gameengine.GWTRenderer/de.mirkosertic.gameengine.GWTRenderer.nocache.js"></script>
