#30 Better UI with Dark Theme

--- a/gameengine-editor/src/main/webapp/webcomponents/gameeditor-contextmenu/gameeditor-contextmenu.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/gameeditor-contextmenu/gameeditor-contextmenu.html
@@ -20,16 +20,16 @@
         <style>
             :host {
                 position: absolute;
-                border: 1px solid white;
+                border: 1px solid #505050;
             }
 
             .contextmenupopup {
             }
 
             .contextmenutitle {
-                color: white;
+                color: #b1b2b2;
                 font-family: 'Open Sans', sans-serif;
-                background-color: #e74c3c;
+                background-color: #292929;
                 padding: 0.1em;
                 padding-left: 0.3em;
                 height: 1.6em;
