--- a/gameengine-editor/src/main/webapp/webcomponents/gameeditor-contextmenuitem/gameeditor-contextmenuitem.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/gameeditor-contextmenuitem/gameeditor-contextmenuitem.html
@@ -19,9 +19,9 @@
     <template>
         <style>
             .contextmenuitem {
-                color: white;
+                color: #b1b2b2;
                 font-family: 'Open Sans', sans-serif;
-                background-color: #4a5058;
+                background-color: #404040;
                 padding: 0.1em;
                 padding-left: 0.3em;
                 padding-right: 0.3em;
