--- a/gameengine-editor/src/main/webapp/webcomponents/gameeditor-ruleeditor/gameeditor-ruleeditor.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/gameeditor-ruleeditor/gameeditor-ruleeditor.html
@@ -49,7 +49,7 @@
 
             .genericdeletebutton {
                 vertical-align: middle;
-                background-image: url("close.png");
+                background-image: url("delete.png");
                 display: inline-block;
                 width: 18px;
                 height: 18px;
