--- a/gameengine-editor/src/main/webapp/webcomponents/gameeditor-separator/gameeditor-separator.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/gameeditor-separator/gameeditor-separator.html
@@ -19,25 +19,27 @@
     <template>
         <style>
             .separator {
-                color: white;
+                color: #b1b2b2;
                 font-family: 'Open Sans', sans-serif;
-                background-color: #e74c3c;
+                background-color: #292929;
                 padding: 0.1em;
                 padding-left: 0.3em;
                 height: 1.6em;
                 line-height: 1.6em;
                 vertical-align: middle;
+                border: 1px solid #505050;
             }
 
             .separatorlight {
-                color: white;
+                color: #b1b2b2;
                 font-family: 'Open Sans', sans-serif;
-                background-color: #4a5058;
+                background-color: #404040;
                 padding: 0.1em;
                 padding-left: 0.3em;
                 height: 1.6em;
                 line-height: 1.6em;
                 vertical-align: middle;
+                border: 1px solid #505050;
             }
 
             .deletebutton {
@@ -45,7 +47,7 @@
                 float: right;
                 visibility: hidden;
                 display: none;
-                background-image: url("close.png");
+                background-image: url("delete.png");
                 display: inline;
                 width: 18px;
                 height: 18px;
