--- a/gameengine-editor/src/main/webapp/webcomponents/gameeditor-tabbedpane/gameeditor-tabbedpanetab.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/gameeditor-tabbedpane/gameeditor-tabbedpanetab.html
@@ -23,9 +23,9 @@
             }
 
             .tabpanebutton {
-                color: white;
+                color: #b1b2b2;
                 margin-left: 1em;
-                background-color: #e74c3c;
+                background-color: #292929;
                 display: flex;
                 flex-direction: row;
                 align-items: center;
@@ -43,11 +43,11 @@
             }
 
             .tabpanebutton:hover {
-                background-color: #4a5058;
+                background-color: #404040;
             }
 
             .selected {
-                background-color: #4a5058;
+                background-color: #404040;
             }
         </style>
 
