--- a/gameengine-editor/src/main/webapp/webcomponents/gameeditor-textfieldpropertyeditor/gameeditor-textfieldpropertyeditor.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/gameeditor-textfieldpropertyeditor/gameeditor-textfieldpropertyeditor.html
@@ -55,7 +55,7 @@
                 float: right;
                 visibility: hidden;
                 display: none;
-                background-image: url("close.png");
+                background-image: url("delete.png");
                 width: 18px;
                 height: 18px;
             }
