--- a/gameengine-editor/src/main/webapp/webcomponents/gameeditor-treeitem/gameeditor-treeitem.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/gameeditor-treeitem/gameeditor-treeitem.html
@@ -20,7 +20,7 @@
         <style>
             .level1 {
                 padding-left: 0.2em;
-                color: white;
+                color: #b1b2b2;
             }
 
             .level1:hover {
@@ -30,7 +30,7 @@
 
             .level2 {
                 padding-left: 1.2em;
-                color: white;
+                color: #b1b2b2;
             }
 
             .level2:hover {
@@ -40,7 +40,7 @@
 
             .level3 {
                 padding-left: 2.2em;
-                color: white;
+                color: #b1b2b2;
             }
 
             .level3:hover {
@@ -54,9 +54,9 @@
             }
 
             .separator {
-                color: white;
+                color: #b1b2b2;
                 font-family: 'Open Sans', sans-serif;
-                background-color: #e74c3c;
+                background-color: #292929;
                 padding: 0.1em;
                 padding-left: 0.3em;
                 height: 1.6em;
@@ -68,7 +68,7 @@
                 vertical-align: middle;
                 float: right;
                 visibility: hidden;
-                background-image: url("close.png");
+                background-image: url("delete.png");
                 width: 18px;
                 height: 18px;
             }
