--- a/gameengine-editor/src/main/webapp/webcomponents/gameeditor-sceneeditor/gameeditor-sceneeditor.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/gameeditor-sceneeditor/gameeditor-sceneeditor.html
@@ -26,9 +26,9 @@
             }
 
             .separator {
-                color: white;
+                color: #b1b2b2;
                 font-family: 'Open Sans', sans-serif;
-                background-color: #4a5058;
+                background-color: #404040;
                 padding: 0.1em;
                 padding-left: 0.3em;
                 height: 1.6em;
