--- a/gameengine-editor/src/main/webapp/webcomponents/gameeditor-tabbedpane/gameeditor-tabbedpane.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/gameeditor-tabbedpane/gameeditor-tabbedpane.html
@@ -25,12 +25,13 @@
                 flex-direction: column;
                 width: 100%;
                 height: 100%;
+                border: 0px;
             }
 
             .tabpanebuttons {
                 display: flex;
                 flex-direction: row;
-                background-color: #e74c3c;
+                background-color: #292929;
             }
         </style>
 
