--- a/gameengine-bytecoderrenderer/src/main/webapp/indexjs.html
+++ b/gameengine-bytecoderrenderer/src/main/webapp/indexjs.html
@@ -32,26 +32,36 @@
     <canvas id="html5canvas" class="mainCanvas"/>
     <script language="JavaScript">
 
-        bytecoder.imports.renderer.autodetectRendererINTINTHTMLCanvasElement = function(aWidth, aHeight, aCanvasElement) {
-            return PIXI.autoDetectRenderer(aWidth, aHeight, {
-                view: aCanvasElement
-            });
+        bytecoder.imports.renderer = {
+            autodetectRendererINTINTHTMLCanvasElement : function(aWidth, aHeight, aCanvasElement) {
+                return PIXI.autoDetectRenderer(aWidth, aHeight, {
+                    view: aCanvasElement
+                });
+            }
         };
-        bytecoder.imports.container.createContainer = function() {
-            return new PIXI.Container();
+        bytecoder.imports.container = {
+            createContainer : function() {
+                return new PIXI.Container();
+            }
         };
-        bytecoder.imports.graphics.createGraphics = function() {
-            return new PIXI.Graphics();
+        bytecoder.imports.graphics = {
+            createGraphics : function() {
+                return new PIXI.Graphics();
+            }
         };
-        bytecoder.imports.text.createTextString = function(aText) {
-            return new PIXI.Text(bytecoder.toJSString(aText));
+        bytecoder.imports.text = {
+            createTextString : function(aText) {
+                return new PIXI.Text(bytecoder.toJSString(aText));
+            }
         };
-        bytecoder.imports.loader.create = function() {
-            var loader = new PIXI.loaders.Loader();
-            loader.pre(function(resource, chain) {
-                chain();
-            });
-            return loader;
+        bytecoder.imports.loader = {
+            create : function() {
+                var loader = new PIXI.loaders.Loader();
+                loader.pre(function(resource, chain) {
+                    chain();
+                });
+                return loader;
+            }
         };
         bytecoder.imports.sprite = {
             createSpriteTexture : function(texture) {
