--- a/gameengine-bytecoderrenderer/src/main/webapp/index.html
+++ b/gameengine-bytecoderrenderer/src/main/webapp/index.html
@@ -26,7 +26,7 @@
             left: 0px;
         }
     </style>
-    <script src="bytecoder_wasmbindings.js" type="text/javascript"></script>
+    <script src="bytecoder.js" type="text/javascript"></script>
 </head>
 <body>
     <canvas id="html5canvas" class="mainCanvas"/>
